apps/user1-foo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user1-foo
  labels:
    app: user1-foo
spec:
  selector:
    app: user1-foo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
