apps/user1-foo/ingress.yaml
# apps/user1-foo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user1-foo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: user1-foo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user1-foo
                port:
                  number: 80
